added setDirectory plugin

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -6,3 +6,4 @@
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
 2D Macro Tool, "Hello World", org.gdmn.imagej.utils.HelloWorld
+2D Macro Tool, "Set Directory", org.gdmn.imagej.utils.setDirectory
