--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -5,5 +5,6 @@
 # If something like ("<arg>") is appended to the class name, the setup() method
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
-2D Macro Tool, "Hello World", org.gdmn.imagej.utils.HelloWorld
-2D Macro Tool, "Set Directory", org.gdmn.imagej.utils.setDirectory
+2D Macro Tool, "Hello World", org.gdmn.imagej.debug.HelloWorld
+2D Macro Tool, "Set Directory", org.gdmn.imagej.dir.setDirectory
+2D Macro Tool, "Collect Images", org.gdmn.imagej.utils.CollectImages
