--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-		http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -13,19 +12,19 @@
 	</parent>
 
 	<groupId>org.gdmn</groupId>        <!-- FIXME: Your organization groupId here -->
-	<artifactId>GdMNPlugin</artifactId> <!-- FIXME: Your project artifactId here   -->
+	<artifactId>GdMNPlugin</artifactId> <!-- FIXME: Your project artifactId here -->
 	<version>0.1.0-SNAPSHOT</version>
 
-	<name>GdMN Plugin</name>                                                   <!-- FIXME: Your project name here          -->
-	<description>A Maven project implementing an ImageJ 1.x plugin.</description> <!-- FIXME: Your project description here   -->
-	<url>https://armi.org.au/our-groups/del-monte-nieto-group/</url>                       <!-- FIXME: Your project website here       -->
-	<inceptionYear>2024</inceptionYear>                                           <!-- FIXME: Your project starting year here -->
+	<name>GdMN Plugin</name> <!-- FIXME: Your project name here -->
+	<description>A Maven project implementing an ImageJ 2.x plugin.</description> <!-- FIXME: Your project description here -->
+	<url>https://armi.org.au/our-groups/del-monte-nieto-group/</url> <!-- FIXME: Your project website here -->
+	<inceptionYear>2024</inceptionYear> <!-- FIXME: Your project starting year here -->
 	<organization>
-		<name>GdMN</name>           <!-- FIXME: Your organization name here    -->
+		<name>del Monte-Nieto Group</name> <!-- FIXME: Your organization name here -->
 		<url>https://armi.org.au/our-groups/del-monte-nieto-group/</url> <!-- FIXME: Your organization website here -->
 	</organization>
 	<licenses>
-		<license>                         <!-- FIXME: Your license here -->
+		<license> <!-- FIXME: Your license here -->
 			<name>CC0</name>
 			<url>https://creativecommons.org/publicdomain/zero/1.0/</url>
 			<distribution>repo</distribution>
@@ -35,9 +34,9 @@
 	<developers>
 		<!-- See https://imagej.net/contribute/governance#scijava-team-roles -->
 		<developer>
-			<id>Kaltzisp</id>                                          <!-- FIXME: Your GitHub handle here -->
-			<name>Peter Kaltzis</name>                            <!-- FIXME: Your name here          -->
-			<url>https://github.com/Kaltzisp</url> <!-- FIXME: Your website here       -->
+			<id>Kaltzisp</id> <!-- FIXME: Your GitHub handle here -->
+			<name>Peter Kaltzis</name> <!-- FIXME: Your name here -->
+			<url>https://github.com/Kaltzisp</url> <!-- FIXME: Your website here -->
 			<roles>
 				<role>founder</role>
 				<role>lead</role>
@@ -77,10 +76,19 @@
 	</ciManagement>
 
 	<properties>
-		<package-name>org.gdmn.imagej</package-name>                   <!-- FIXME: Your project package prefix here -->
-		<license.licenseName>cc0</license.licenseName>                      <!-- FIXME: Your license-maven-plugin license code here -->
-		<license.copyrightOwners>GdMN</license.copyrightOwners> <!-- FIXME: Your organization legal entity name here -->
+		<package-name>org.gdmn.imagej</package-name> <!-- FIXME: Your project package prefix here -->
+		<license.licenseName>cc0</license.licenseName> <!-- FIXME: Your license-maven-plugin license
+		code here -->
+		<license.copyrightOwners>GdMN</license.copyrightOwners> <!-- FIXME: Your organization legal
+		entity name here -->
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>scijava-releases</id>
+			<url>https://maven.scijava.org/content/repositories/releases/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -90,6 +98,10 @@
 		<dependency>
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>fr.inra.ijpb</groupId>
+			<artifactId>MorphoLibJ_</artifactId>
 		</dependency>
 	</dependencies>
 </project>
