--- a/pom.xml
+++ b/pom.xml
@@ -11,76 +11,26 @@
 		<relativePath />
 	</parent>
 
-	<groupId>org.gdmn</groupId>        <!-- FIXME: Your organization groupId here -->
-	<artifactId>GdMNPlugin</artifactId> <!-- FIXME: Your project artifactId here -->
-	<version>0.1.0-SNAPSHOT</version>
+	<groupId>org.gdmn</groupId>
+	<artifactId>GdMNPlugin</artifactId>
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
 
-	<name>GdMN Plugin</name> <!-- FIXME: Your project name here -->
-	<description>A Maven project implementing an ImageJ 2.x plugin.</description> <!-- FIXME: Your project description here -->
-	<url>https://armi.org.au/our-groups/del-monte-nieto-group/</url> <!-- FIXME: Your project website here -->
-	<inceptionYear>2024</inceptionYear> <!-- FIXME: Your project starting year here -->
-	<organization>
-		<name>del Monte-Nieto Group</name> <!-- FIXME: Your organization name here -->
-		<url>https://armi.org.au/our-groups/del-monte-nieto-group/</url> <!-- FIXME: Your organization website here -->
-	</organization>
-	<licenses>
-		<license> <!-- FIXME: Your license here -->
-			<name>CC0</name>
-			<url>https://creativecommons.org/publicdomain/zero/1.0/</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
+	<name> GdMN Lab ImageJ Plugin</name>
+	<description>ImageJ Plugin for the del Monte-Nieto lab.</description>
 
 	<developers>
-		<!-- See https://imagej.net/contribute/governance#scijava-team-roles -->
 		<developer>
-			<id>Kaltzisp</id> <!-- FIXME: Your GitHub handle here -->
-			<name>Peter Kaltzis</name> <!-- FIXME: Your name here -->
-			<url>https://github.com/Kaltzisp</url> <!-- FIXME: Your website here -->
-			<roles>
-				<role>founder</role>
-				<role>lead</role>
-				<role>developer</role>
-				<role>debugger</role>
-				<role>reviewer</role>
-				<role>support</role>
-				<role>maintainer</role>
-			</roles>
+			<id>Kaltzisp</id>
+			<name>Peter Kaltzis</name>
+			<email>peterkaltzis@outlook.com</email>
+			<url>https://github.com/Kaltzisp/</url>
 		</developer>
 	</developers>
-	<contributors>
-		<contributor>
-			<name>None</name>
-		</contributor>
-	</contributors>
-
-	<mailingLists>
-		<mailingList>
-			<name>Image.sc Forum</name>
-			<archive>https://forum.image.sc/tag/imagej</archive>
-		</mailingList>
-	</mailingLists>
-
-	<scm>
-		<connection>scm:git:https://github.com/imagej/example-legacy-plugin</connection>
-		<developerConnection>scm:git:git@github.com:imagej/example-legacy-plugin</developerConnection>
-		<tag>HEAD</tag>
-		<url>https://github.com/imagej/example-legacy-plugin</url>
-	</scm>
-	<issueManagement>
-		<system>GitHub Issues</system>
-		<url>https://github.com/imagej/example-legacy-plugin/issues</url>
-	</issueManagement>
-	<ciManagement>
-		<system>None</system>
-	</ciManagement>
 
 	<properties>
-		<package-name>org.gdmn.imagej</package-name> <!-- FIXME: Your project package prefix here -->
-		<license.licenseName>cc0</license.licenseName> <!-- FIXME: Your license-maven-plugin license
-		code here -->
-		<license.copyrightOwners>GdMN</license.copyrightOwners> <!-- FIXME: Your organization legal
-		entity name here -->
+		<package-name>org.gdmn.imagej</package-name>
+		<enforcer.skip>true</enforcer.skip>
 	</properties>
 
 	<repositories>
